--- a/ShopBridge_eCommerceApp/ShopBridge_eCommerceApp/Web.config
+++ b/ShopBridge_eCommerceApp/ShopBridge_eCommerceApp/Web.config
@@ -58,6 +58,7 @@
   </system.codedom>
   <connectionStrings>
     <add name="ThinkBridgeEntities" connectionString="metadata=res://*/Models.Adminlogin.csdl|res://*/Models.Adminlogin.ssdl|res://*/Models.Adminlogin.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=US-PF27LCML\SQLEXPRESS;initial catalog=ThinkBridge;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ThinkBridgeEntities1" connectionString="metadata=res://*/Models.ProductDetails.csdl|res://*/Models.ProductDetails.ssdl|res://*/Models.ProductDetails.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=US-PF27LCML\SQLEXPRESS;initial catalog=ThinkBridge;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
